internal/dataplane/parser/testdata/golden/ingress-v1-with-acme-like-path/combined-routes-off_golden.yaml
_format_version: "3.0"
services:
- connect_timeout: 60000
  host: cert-manager-solver-pod.foo-namespace.80.svc
  id: 53a98821-7879-5a65-bf53-1688f4df6814
  name: foo-namespace.cert-manager-solver-pod.pnum-80
  path: /
  port: 80
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - hosts:
    - example.com
    https_redirect_status_code: 426
    id: 1d9c6ccc-b13f-5a88-ae11-549f290dcd8b
    name: foo-namespace.foo.00
    path_handling: v0
    paths:
    - /.well-known/acme-challenge/yolo
    preserve_host: true
    protocols:
    - http
    - https
    regex_priority: 100
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:foo
    - k8s-namespace:foo-namespace
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  tags:
  - k8s-name:cert-manager-solver-pod
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  name: cert-manager-solver-pod.foo-namespace.80.svc
  tags:
  - k8s-name:cert-manager-solver-pod
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
